Updated test cases for Map interface with new methods.